# webservOS

./: .gitignore  Cargo.toml  LICENCE  build.sh  env.sh  lint.sh  run.sh  target.json
.cargo/: config.toml
src/: allocator.rs  boot.S  boot.rs  main.rs
src/io/: mod.rs  pci.rs  serial.rs  vga.rs
